# omega

./: CMakeLists.txt  README.md
cmake/: Toolchain-omega2-mipsel.cmake
source/: main.cpp  main.h
